fixes for running with postgresql/testcontainers