@@ -8,7 +8,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import ro.zizicu.mservice.order.data.CustomerRepository;
 import ro.zizicu.mservice.order.data.OrderRepository;
 import ro.zizicu.mservice.order.entities.Customer;
 import ro.zizicu.mservice.order.entities.Employee;
@@ -29,16 +28,13 @@ public class OrderServiceImpl extends CrudServiceImpl<Order, Integer>
 
 	private final RestClient restClient;
 	private final OrderRepository orderRepository;
-	private final CustomerRepository customerRepository;
 
 	public OrderServiceImpl(OrderRepository orderRepository,
-							CustomerRepository customerRepository,
 							RestClient restClient
 							) {
 
 		this.repository = orderRepository;
 		this.orderRepository = orderRepository;
-		this.customerRepository = customerRepository;
 		this.restClient = restClient;
 	}
 
@@ -50,11 +46,8 @@ public class OrderServiceImpl extends CrudServiceImpl<Order, Integer>
 						  Customer customer,
 						  Integer shipperId) throws ProductNotFoundException {
 		if(log.isInfoEnabled()) log.info("create order");
-		if(log.isDebugEnabled()) log.debug("number of order details: " + products.size());
-		Long transactionId = orderRepository.getTransactionId();
-		log.debug("start distributed transaction {}", transactionId);
-
-		order = addOrderDetails(products, order, transactionId);
+		if(log.isDebugEnabled()) log.debug("number of order details: {}", products.size());
+		order = addOrderDetails(products, order);
 		order.setOrderDate(new Date());
 		order.setCustomer(customer);
 		order.setEmployee(employee);
@@ -70,16 +63,13 @@ public class OrderServiceImpl extends CrudServiceImpl<Order, Integer>
 		if(log.isInfoEnabled()) log.info("update order with id {}", order.getId());
 		Order fromDatabase = orderRepository.findById(order.getId()).orElseThrow(OrderNotFoundException::new);
 		fromDatabase.getOrderDetails().clear();
-		
 		if(order.getFreight()!= null)
 			fromDatabase.setFreight(order.getFreight());
 		if(order.getShipAddress()!= null)
 			fromDatabase.setShipAddress(order.getShipAddress());
-
-		Long transactionId = orderRepository.getTransactionId();
-		log.debug("start distributed transaction {}", transactionId);
-
-		fromDatabase = addOrderDetails(products, fromDatabase, transactionId);
+		log.debug("add details to order with id {}", order.getId());
+		fromDatabase = addOrderDetails(products, fromDatabase);
+		log.debug("save order with id {}", fromDatabase.getId());
 		order = orderRepository.save(fromDatabase);
 		if(log.isInfoEnabled()) log.info("order updated");
 		return order;
@@ -88,7 +78,7 @@ public class OrderServiceImpl extends CrudServiceImpl<Order, Integer>
 	@Override
 	@Transactional
 	public void cancelOrder(Order order) {
-		if(log.isInfoEnabled()) log.info("cancel order " + order.getId());
+		if(log.isInfoEnabled()) log.info("cancel order {}", order.getId());
 		orderRepository.delete(order);
 		if(log.isInfoEnabled()) log.info("order cancelled");
 	}
@@ -104,21 +94,21 @@ public class OrderServiceImpl extends CrudServiceImpl<Order, Integer>
 				.collect(Collectors.toList());
 	}
 
-	private Order addOrderDetails(List<ProductValueObject> products, Order order, final Long transactionId) {
+	private Order addOrderDetails(List<ProductValueObject> products, Order order) {
 		products = checkStock(products);
 
 		List<ProductValueObject> insufficientStockProducts = products.stream()
-				.filter( v -> !v.getEnoughStock() ).collect(Collectors.toList());
+				.filter( v -> !v.getEnoughStock() ).toList();
 
 		if(!insufficientStockProducts.isEmpty() )
 		{
 			log.error("not enough stock ");
 			String errorMessage = insufficientStockProducts.stream().
-					map( v -> "" + v.getId() + " " + v.getUnitsInStock()  ).collect(Collectors.joining(" \n"));
+					map( v -> v.getId() + " " + v.getUnitsInStock()  ).collect(Collectors.joining(" \n"));
 			throw new NotEnoughQuantity(errorMessage);
 		}
 
-		products.forEach(p -> restClient.updateProductQuantity(p, transactionId));
+		products.forEach(restClient::updateProductQuantity);
 
 		List<OrderDetail> orderDetails = products.stream().map( v -> OrderDetail.builder().productId(v.getId())
 				.unitPrice(v.getUnitPrice())
